deploy/np-cilium/cilium-np.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trafic-to-meta
spec:
  endpointSelector: {}
  egress:
    - toCIDRSet:
        - cidr: 169.254.169.254/32
      toPorts:
        - ports:
            - port: "80"
      toPorts:
        - ports:
            - port: "988"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trafic-to-meta-proxy
spec:
  endpointSelector: {}
  egress:
    - toPorts:
        - ports:
            - port: "988"
